# timepix3

./: CMakeLists.txt  LICENSE  README.md  chipconfig_D4-W0005.bmc  config_loader.py  katherine_config.py  katherine_wrapper.py  katherine_wrapper_v01.py  katherine_wrapper_v02.py  katherine_wrapper_v03.py  katherine_wrapper_v04.py  katherine_wrapper_v05.py  katherine_wrapper_v06.py  test_wrapper.py
c/: CMakeLists.txt
c/examples/: CMakeLists.txt  Erun.c  Erun2.c  Erun3.c  Erun_frame.c  THLrun.c  THLrun2.c  THLrun2_exclude800.c  THLrun_frame_exclude800.c  kfind.c  krun.c  ramping_bias.c  ramping_bias2.c  ramping_bias3.c  test.c
c/include/: tpx3h5lib.h
katherine_ctypes/: __init__.py  cacquisition_ctypes.py  cconfig_ctypes.py  cdevice_ctypes.py  cpx_config_ctypes.py  cstatus_ctypes.py  katherine_ctypes.py
python_socket/: katherine_socket.py
